--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "Dependency/IconFontCppHeaders"]
 	path = Dependency/IconFontCppHeaders
 	url = https://github.com/juliettef/IconFontCppHeaders.git
+[submodule "Dependency/json"]
+	path = Dependency/json
+	url = https://github.com/nlohmann/json.git
